add origin trial tokens

--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Translator -->
+    <meta
+      http-equiv="origin-trial"
+      content="AtfqZAQXYHWcPU9CGq7QvzqNrGHBG+XE6v4lMuib96B4Gpf9efKU5wl/8npVibBxNYRk7oWPE9O3QpOTxHVUvAkAAAB5eyJvcmlnaW4iOiJodHRwczovL2huZzEyLWFpLXRyYW5zbGF0b3IudmVyY2VsLmFwcDo0NDMiLCJmZWF0dXJlIjoiVHJhbnNsYXRpb25BUEkiLCJleHBpcnkiOjE3NTMxNDI0MDAsImlzU3ViZG9tYWluIjp0cnVlfQ=="
+    />
+    <!-- Detector -->
+    <meta
+      http-equiv="origin-trial"
+      content="Am6S7BXIthNwDHTnGBIHMN1CxgEYizsJ7YCr+REkJMxlNjuKygLDVkzuwTHjzVC+4405KeYL2yGmkM9NUgpsdgIAAAB/eyJvcmlnaW4iOiJodHRwczovL2huZzEyLWFpLXRyYW5zbGF0b3IudmVyY2VsLmFwcDo0NDMiLCJmZWF0dXJlIjoiTGFuZ3VhZ2VEZXRlY3Rpb25BUEkiLCJleHBpcnkiOjE3NDk1OTk5OTksImlzU3ViZG9tYWluIjp0cnVlfQ=="
+    />
+    <!-- Summarizer -->
+    <meta
+      http-equiv="origin-trial"
+      content="AoVT+Zyqx/pWzw/NQlmQe+PBL7oXGoiMQC0EP/wHVW77ngM6B/KlnphRm6QTUO0JYfR4njCqlrrfcMEcX7m1BgwAAAB9eyJvcmlnaW4iOiJodHRwczovL2huZzEyLWFpLXRyYW5zbGF0b3IudmVyY2VsLmFwcDo0NDMiLCJmZWF0dXJlIjoiQUlTdW1tYXJpemF0aW9uQVBJIiwiZXhwaXJ5IjoxNzUzMTQyNDAwLCJpc1N1YmRvbWFpbiI6dHJ1ZX0="
+    />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
